--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DondeViajo.com</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -24,22 +25,32 @@
 
     <main>
 <section class="hero">
-  <div class="carousel">
-    <div class="slides">
-      <article class="slide">
-        <img src="assets/img/iguazu1.png" alt="Cataratas del Iguazú" />
-        <h2>Descubrí Argentina según tu mood</h2>
-      </article>
-      <article class="slide">
-        <img src="assets/img/norte.jpg" alt="Región Norte de Argentina" />
-      </article>
-      <article class="slide">
-        <img src="assets/img/sur.jpg" alt="Región Sur de Argentina" />
-      </article>
+    <div class="container-fluid">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="7000">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/iguazu1.png" class="d-block w-100" alt="1">
+                </div>
+                
+                <div class="carousel-item">
+                    <img src="assets/img/sur.jpg" class="d-block w-100" alt="3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Anterior</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Siguiente</span>
+            </button>
+        </div>
     </div>
-    <button class="prev">&#10094;</button>
-    <button class="next">&#10095;</button>
-  </div>
 </section>
 
 <h2>Descubrí Argentina según tu mood</h2>
@@ -87,51 +98,7 @@
         <p>© 2025 DondeViajo.com</p>
     </footer>
 
-<script>
-  const slidesContainer = document.querySelector('.carousel .slides');
-  const slides = document.querySelectorAll('.carousel .slide');
-  const prevBtn = document.querySelector('.carousel .prev');
-  const nextBtn = document.querySelector('.carousel .next');
-  let currentIndex = 0;
-  let slideInterval;
-
-  function showSlide(index) {
-    if (index < 0) {
-      currentIndex = slides.length - 1;
-    } else if (index >= slides.length) {
-      currentIndex = 0;
-    } else {
-      currentIndex = index;
-    }
-    slidesContainer.style.transform = `translateX(-${currentIndex * 100}%)`;
-  }
-
-  function startAutoSlide() {
-    slideInterval = setInterval(() => {
-      showSlide(currentIndex + 1);
-    }, 7000); // Cambia cada 7 segundos para que no pase rápido
-  }
-
-  function stopAutoSlide() {
-    clearInterval(slideInterval);
-  }
-
-  prevBtn.addEventListener('click', () => {
-    showSlide(currentIndex - 1);
-    stopAutoSlide();
-    startAutoSlide();
-  });
-
-  nextBtn.addEventListener('click', () => {
-    showSlide(currentIndex + 1);
-    stopAutoSlide();
-    startAutoSlide();
-  });
-
-  // Arranca el carrusel automático
-  startAutoSlide();
-</script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
