--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DondeViajo.com</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 
-    <header>
-        <div class="logo">
-            <h1>DondeViajo.com</h1>
-            <p>Tu aventura, hecha a tu medida</p>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Destinos</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #61a7da;">
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <h1 class="m-0" style="font-size: 1.5rem;">DondeViajo.com</h1>
+        <p class="m-0" style="font-size: 0.9rem;">Tu aventura, hecha a tu medida</p>
+      </a>
 
-    <main>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Destinos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Itinerarios</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Español</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<main>
 <section class="hero">
     <div class="container-fluid">
         <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="7000">
@@ -34,11 +46,11 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/iguazu1.png" class="d-block w-100" alt="1">
+                    <img src="assets/img/iguazu1.png" class="d-block w-100" alt="1" />
                 </div>
                 
                 <div class="carousel-item">
-                    <img src="assets/img/sur.jpg" class="d-block w-100" alt="3">
+                    <img src="assets/img/sur.jpg" class="d-block w-100" alt="3" />
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -79,24 +91,24 @@
 
 <section class="regiones">
     <article class="region">
-        <img src="assets/img/norte.jpg" alt="Región Norte de Argentina">
+        <img src="assets/img/norte.jpg" alt="Región Norte de Argentina" />
         <h4>Norte</h4>
     </article>
     <article class="region">
-        <img src="assets/img/centro.jpg" alt="Región Centro de Argentina">
+        <img src="assets/img/centro.jpg" alt="Región Centro de Argentina" />
         <h4>Centro</h4>
     </article>
     <article class="region">
-        <img src="assets/img/sur.jpg" alt="Región Sur de Argentina">
+        <img src="assets/img/sur.jpg" alt="Región Sur de Argentina" />
         <h4>Sur</h4>
     </article>
 </section>
 
-    </main>
+</main>
 
-    <footer>
-        <p>© 2025 DondeViajo.com</p>
-    </footer>
+<footer>
+    <p>© 2025 DondeViajo.com</p>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
