--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>DondeViajo.com</title>
+    <title>DondeViajoArgentina.com</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 
 <header>
+
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #61a7da;">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <h1 class="m-0" style="font-size: 1.5rem;">DondeViajo.com</h1>
+        <h1 class="m-0" style="font-size: 1.5rem;">DondeViajoArgentina.com</h1>
         <p class="m-0" style="font-size: 0.9rem;">Tu aventura, hecha a tu medida</p>
       </a>
 
@@ -36,6 +37,8 @@
 </header>
 
 <main>
+  <h2>Descubrí Argentina según tu mood</h2>
+
 <section class="hero">
     <div class="container-fluid">
         <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="7000">
@@ -53,7 +56,7 @@
                 </div>
                 <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img src="assets/img/sur.jpg" class="d-block w-100" alt="Sur" />
+                  <img src="assets/img/laslenas.jpg" class="d-block w-100" alt="Sur" />
                   <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
                     <h2 class="text-white text-shadow">¿Team Invierno? Disfrutá Las Leñas</h2>
                   </div>
@@ -78,7 +81,6 @@
     </div>
 </section>
 
-<h2>Descubrí Argentina según tu mood</h2>
 
 <section class="form-section">
     <article>
@@ -136,6 +138,10 @@
 
 <footer>
     <p>© 2025 DondeViajo.com</p>
+    <a href="#">Política de Privacidad</a> |
+    <a href="#">Términos de Servicio</a>
+    <p>Desarrollado por <a href=https://github.com/JezabelCoronas>Jezabel Coronas</a></p>
+    <p>Contacto: <a href="mailto:#">dondeviajoarg@ejemplo.com</a></p>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
